# astrolocal

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
astrolocal/: __init__.py  config.py  logging_setup.py  main.py  models.py
astrolocal/core/: __init__.py  chart.py  synastry.py  transits.py
astrolocal/knowledge/: __init__.py
astrolocal/llm/: client.py  interpreter.py  prompts.py
astrolocal/storage/: __init__.py  database.py
astrolocal/ui/: cli.py
knowledge_base/: aspects_meanings.toml  houses.toml  planets_in_signs.toml
tests/: __init__.py  test_config.py  test_database.py  test_llm_client.py  test_models.py
