[project]
name = "astrolocal"
version = "0.1.0"
description = "Tu astrólogo personal con IA local. 100% privado, 100% offline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "AstroLocal Contributors" }]
keywords = ["astrology", "llm", "local", "privacy", "kerykeion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "kerykeion>=4.0,<5.0",
    "httpx>=0.27,<1.0",
    "rich>=13.0,<14.0",
    "click>=8.1,<9.0",
    "pydantic>=2.6,<3.0",
    "aiosqlite>=0.20,<1.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "jinja2>=3.1,<4.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.9,<2.0",
    "bandit>=1.7,<2.0",
    "safety>=3.0,<4.0",
    "pre-commit>=3.6,<4.0",
]

[project.scripts]
astrolocal = "astrolocal.main:cli"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "S",         # bandit (security)
    "B",         # bugbear
    "C4",        # comprehensions
    "UP",        # pyupgrade
    "RUF",       # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
